Started making the Monte Carlo simulation

--- a/main.ipynb
+++ b/main.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cost Estimation For IRIDE Constellation\n",
-    "\n",
+    "# Cost Estimation For IRIDE Constellation\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Imports"
    ]
   },
@@ -178,13 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "NPV =  -577.8950631341239\n",
       "Balance Sheet:\n",
       "                             2023   2024   2025   2026   2027   2028   2029   2030   2031   2032   2033\n",
       "Current Assets             647.00 269.22 -19.03 -22.99 105.81 250.57 139.98 -58.01 -25.54 193.90 435.09\n",
@@ -219,10 +225,11 @@
    ],
    "source": [
     "pd.options.display.float_format = '{:,.2f}'.format\n",
-    "class FinancialPeriod():\n",
-    "    def __init__(self, first_year:int=2023, duration:int=11):\n",
+    "class FinancialStatementSimulator():\n",
+    "    def __init__(self, first_year:int=2023, duration:int=11, wacc:float=1):\n",
     "        self.first_year = first_year\n",
     "        self.duration = duration\n",
+    "        self.wacc = wacc\n",
     "        self.years = [first_year + i for i in range(duration)]\n",
     "        self.delta_balance_sheet = pd.DataFrame(0, index=self.years, columns=[\n",
     "            'Current Assets',\n",
@@ -336,6 +343,13 @@
     "                raise ValueError(\"The length of the tax_ratios does not match the duration\")\n",
     "        self.income_statement['Tax Ratio'] = tax_ratios\n",
     "    \n",
+    "    def net_present_value(self):\n",
+    "        net_change_in_cash = self.cash_flow_statement['Operating CF'].values + self.cash_flow_statement['Investing CF'].values - self.cash_flow_statement['Financing CF'].values\n",
+    "        years = np.arange(0, len(net_change_in_cash))\n",
+    "        discounted_cash = net_change_in_cash / (1 + self.wacc) ** years\n",
+    "        npv = np.sum(discounted_cash)\n",
+    "        return npv\n",
+    "    \n",
     "    def print_results(self):\n",
     "        print(\"Balance Sheet:\")\n",
     "        print(self.balance_sheet.T)\n",
@@ -345,21 +359,23 @@
     "        print(self.cash_flow_statement.T)\n",
     "\n",
     "# Usage\n",
-    "fp = FinancialPeriod(first_year=2023, duration=simulation_length)\n",
-    "fp.set_tax_ratios(.24)\n",
-    "fp.finance(year=2023, amount=1100)\n",
-    "fp.build_asset(year=2023, amount=53.67,  amortization_duration=5, recurring_step=0)\n",
-    "fp.build_asset(year=2023, amount=127.00, amortization_duration=5, recurring_step=0)\n",
-    "fp.build_asset(year=2023, amount=272.33, amortization_duration=5, recurring_step=6)\n",
-    "fp.build_asset(year=2024, amount=216.00, amortization_duration=5, recurring_step=6)\n",
+    "fss = FinancialStatementSimulator(first_year=2023, duration=simulation_length, wacc=0.0333)\n",
+    "fss.set_tax_ratios(.24)\n",
+    "fss.finance(year=2023, amount=1100)\n",
+    "fss.build_asset(year=2023, amount=53.67,  amortization_duration=5, recurring_step=0)\n",
+    "fss.build_asset(year=2023, amount=127.00, amortization_duration=5, recurring_step=0)\n",
+    "fss.build_asset(year=2023, amount=272.33, amortization_duration=5, recurring_step=6)\n",
+    "fss.build_asset(year=2024, amount=216.00, amortization_duration=5, recurring_step=6)\n",
     "\n",
-    "fp.pay_operating_expenses(year=2025, amount=160.15, recurring_step=1)\n",
-    "fp.pay_operating_expenses(year=2024, amount=212.87, recurring_step=6)\n",
-    "fp.pay_operating_expenses(year=2025, amount=219.13, recurring_step=6)\n",
+    "fss.pay_operating_expenses(year=2025, amount=160.15, recurring_step=1)\n",
+    "fss.pay_operating_expenses(year=2024, amount=212.87, recurring_step=6)\n",
+    "fss.pay_operating_expenses(year=2025, amount=219.13, recurring_step=6)\n",
     "for ii in range(0, simulation_length):\n",
-    "    fp.get_revenues(year=time[ii], amount=revenues[ii], recurring_step=0)\n",
+    "    fss.get_revenues(year=time[ii], amount=revenues[ii], recurring_step=0)\n",
     "\n",
-    "fp.print_results()\n"
+    "print(\"NPV = \", fss.net_present_value())\n",
+    "\n",
+    "fss.print_results()\n"
    ]
   },
   {
@@ -371,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -452,27 +468,110 @@
     "\n",
     "\n",
     "# Initialize the FinancialPeriod\n",
-    "fp = FinancialPeriod(first_year=project_begin, duration=simulation_length)\n",
-    "fp.set_tax_ratios(tax_rate)\n",
+    "fss = FinancialStatementSimulator(first_year=project_begin, duration=simulation_length, wacc=0.0333)\n",
+    "fss.set_tax_ratios(tax_rate)\n",
     "\n",
     "# Process each activity in the DataFrame\n",
     "for name, activity in activities.iterrows():\n",
     "    if activity[\"type\"] == \"finance\":\n",
-    "        fp.finance(year=activity[\"begin\"], amount=activity[\"amount\"])\n",
+    "        fss.finance(year=activity[\"begin\"], amount=activity[\"amount\"])\n",
     "    elif activity[\"type\"] == \"build_asset\":\n",
-    "        fp.build_asset(year=activity[\"begin\"], amount=activity[\"amount\"], amortization_duration=activity[\"amortization duration\"], recurring_step=activity[\"recurring\"])\n",
+    "        fss.build_asset(year=activity[\"begin\"], amount=activity[\"amount\"], amortization_duration=activity[\"amortization duration\"], recurring_step=activity[\"recurring\"])\n",
     "    elif activity[\"type\"] == \"pay_operating_expenses\":\n",
-    "        fp.pay_operating_expenses(year=activity[\"begin\"], amount=activity[\"amount\"], recurring_step=activity[\"recurring\"])\n",
+    "        fss.pay_operating_expenses(year=activity[\"begin\"], amount=activity[\"amount\"], recurring_step=activity[\"recurring\"])\n",
     "\n",
     "# Simulate the revenues\n",
     "for ii in range(simulation_length):\n",
-    "    fp.get_revenues(year=time[ii], amount=revenues[ii], recurring_step=0)\n",
+    "    fss.get_revenues(year=time[ii], amount=revenues[ii], recurring_step=0)\n",
     "\n",
     "# Print the results\n",
     "print('Activities:')\n",
     "print(activities)\n",
     "print('\\n')\n",
-    "fp.print_results()\n"
+    "fss.print_results()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Monte Carlo Simulations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-577.8950631341239\n",
+      "-577.8950631341239\n",
+      "-577.8950631341239\n",
+      "-577.8950631341239\n",
+      "-577.8950631341239\n",
+      "-577.8950631341239\n",
+      "-577.8950631341239\n",
+      "-577.8950631341239\n",
+      "-577.8950631341239\n",
+      "-577.8950631341239\n"
+     ]
+    }
+   ],
+   "source": [
+    "# elements = [1.1, 2.2, 3.3]\n",
+    "# probabilities = [0.2, 0.5, 0.3]\n",
+    "# np.random.choice(elements, 10, p=probabilities)\n",
+    "\n",
+    "def simulation():\n",
+    "    project_begin = 2023\n",
+    "    satellite_lifespan = 5\n",
+    "    satellite_launch_delay = 0\n",
+    "    simulation_length = 11\n",
+    "    tax_rate = .24\n",
+    "\n",
+    "    # Define activities in a structured manner\n",
+    "    activities = pd.DataFrame([\n",
+    "        {\"name\": \"Finance\",                    \"type\": \"finance\",                \"begin\": project_begin, \"amount\": 1100.00, \"duration\": 0, \"amortization duration\": 0, \"recurring\": 0},\n",
+    "        {\"name\": \"Satellite b1 RnD\",           \"type\": \"build_asset\",            \"begin\": project_begin, \"amount\":   53.67, \"duration\": 1, \"amortization duration\": 5, \"recurring\": 0},\n",
+    "        {\"name\": \"Infrastructure Development\", \"type\": \"build_asset\",            \"begin\": project_begin, \"amount\":  127.00, \"duration\": 1, \"amortization duration\": 5, \"recurring\": 0},\n",
+    "        {\"name\": \"Satellite b1 Development\",   \"type\": \"build_asset\",            \"begin\": project_begin, \"amount\":  272.33, \"duration\": 1, \"amortization duration\": 5, \"recurring\": satellite_lifespan + 1},\n",
+    "        {\"name\": \"Satellite b2 Development\",   \"type\": \"build_asset\",            \"begin\": None,          \"amount\":  216.00, \"duration\": 1, \"amortization duration\": 5, \"recurring\": satellite_lifespan + 1},\n",
+    "        {\"name\": \"Operation Infrastructure\",   \"type\": \"pay_operating_expenses\", \"begin\": None,          \"amount\":  160.15, \"duration\": 1, \"amortization duration\": 0, \"recurring\": 1},\n",
+    "        {\"name\": \"Satellite b1 Launch\",        \"type\": \"pay_operating_expenses\", \"begin\": None,          \"amount\":  212.87, \"duration\": 1, \"amortization duration\": 0, \"recurring\": satellite_lifespan + 1},\n",
+    "        {\"name\": \"Satellite b2 Launch\",        \"type\": \"pay_operating_expenses\", \"begin\": None,          \"amount\":  219.13, \"duration\": 1, \"amortization duration\": 0, \"recurring\": satellite_lifespan + 1}\n",
+    "    ])\n",
+    "    activities.set_index(\"name\", inplace=True)\n",
+    "\n",
+    "    # Calculate the begin times for dependent activities\n",
+    "    activities.at[\"Satellite b2 Development\", \"begin\"] = activities.at[\"Satellite b1 Development\", \"begin\"] + activities.at[\"Satellite b1 Development\", \"duration\"]\n",
+    "    activities.at[\"Satellite b1 Launch\", \"begin\"] = activities.at[\"Satellite b1 Development\", \"begin\"] + activities.at[\"Satellite b1 Development\", \"duration\"] + satellite_launch_delay\n",
+    "    activities.at[\"Satellite b2 Launch\", \"begin\"] = activities.at[\"Satellite b2 Development\", \"begin\"] + activities.at[\"Satellite b2 Development\", \"duration\"] + satellite_launch_delay\n",
+    "    activities.at[\"Operation Infrastructure\", \"begin\"] = activities.at[\"Satellite b1 Launch\", \"begin\"] + activities.at[\"Satellite b1 Launch\", \"duration\"]\n",
+    "\n",
+    "\n",
+    "    # Initialize the FinancialPeriod\n",
+    "    fss = FinancialStatementSimulator(first_year=project_begin, duration=simulation_length, wacc=0.0333)\n",
+    "    fss.set_tax_ratios(tax_rate)\n",
+    "\n",
+    "    # Process each activity in the DataFrame\n",
+    "    for name, activity in activities.iterrows():\n",
+    "        if activity[\"type\"] == \"finance\":\n",
+    "            fss.finance(year=activity[\"begin\"], amount=activity[\"amount\"])\n",
+    "        elif activity[\"type\"] == \"build_asset\":\n",
+    "            fss.build_asset(year=activity[\"begin\"], amount=activity[\"amount\"], amortization_duration=activity[\"amortization duration\"], recurring_step=activity[\"recurring\"])\n",
+    "        elif activity[\"type\"] == \"pay_operating_expenses\":\n",
+    "            fss.pay_operating_expenses(year=activity[\"begin\"], amount=activity[\"amount\"], recurring_step=activity[\"recurring\"])\n",
+    "\n",
+    "    # Simulate the revenues\n",
+    "    for ii in range(simulation_length):\n",
+    "        fss.get_revenues(year=time[ii], amount=revenues[ii], recurring_step=0)\n",
+    "    return fss.net_present_value()\n",
+    "\n",
+    "for ii in range(10):\n",
+    "    print(simulation())"
    ]
   }
  ],
