Added temporal dependancy on revenues

--- a/main.ipynb
+++ b/main.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -123,23 +123,26 @@
     }
    ],
    "source": [
-    "market_size_data_2023 = 100\n",
-    "market_size_data_2033 = 195\n",
-    "market_size_added_val_2023 = 415\n",
-    "market_size_added_val_2033 = 760\n",
-    "market_size_data_CAGR = (market_size_data_2033/market_size_data_2023)**(1/(2033-2023))-1\n",
-    "market_size_added_val_CAGR = (market_size_added_val_2033/market_size_added_val_2023)**(1/(2033-2023))-1\n",
+    "def market_demand_simulator(time:list, first_year_of_revenue:int):\n",
+    "    market_size_data_2023 = 100\n",
+    "    market_size_data_2033 = 195\n",
+    "    market_size_added_val_2023 = 415\n",
+    "    market_size_added_val_2033 = 760\n",
+    "    market_size_data_CAGR = (market_size_data_2033/market_size_data_2023)**(1/(2033-2023))-1\n",
+    "    market_size_added_val_CAGR = (market_size_added_val_2033/market_size_added_val_2023)**(1/(2033-2023))-1\n",
     "\n",
-    "market_penetration = np.zeros(simulation_length)\n",
-    "market_penetration[time == 2026] = .25\n",
-    "market_penetration[time >  2026] = .5\n",
+    "    market_penetration = np.zeros(simulation_length)\n",
+    "    market_penetration[time == first_year_of_revenue] = .25\n",
+    "    market_penetration[time >  first_year_of_revenue] = .5\n",
     "\n",
-    "revenues = np.zeros(simulation_length)\n",
-    "for ii in range(0,simulation_length):\n",
-    "    revenues[ii] = ((market_size_data_2023 * (1 + market_size_data_CAGR) ** ii + \n",
-    "          market_size_added_val_2023 * (1 + market_size_added_val_CAGR) ** ii) * \n",
-    "          market_penetration[ii])\n",
+    "    revenues = np.zeros(simulation_length)\n",
+    "    for ii in range(0,simulation_length):\n",
+    "        revenues[ii] = ((market_size_data_2023 * (1 + market_size_data_CAGR) ** ii + \n",
+    "            market_size_added_val_2023 * (1 + market_size_added_val_CAGR) ** ii) * \n",
+    "            market_penetration[ii])\n",
+    "    return revenues\n",
     "\n",
+    "revenues = market_demand_simulator(time, 2026)\n",
     "plt.plot(time, revenues)\n",
     "plt.xlabel('Revenues (mil €)')\n",
     "plt.ylabel('Time (year)')\n",
@@ -387,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +468,7 @@
     "activities.at[\"Satellite b1 Launch\", \"begin\"] = activities.at[\"Satellite b1 Development\", \"begin\"] + activities.at[\"Satellite b1 Development\", \"duration\"] + satellite_launch_delay\n",
     "activities.at[\"Satellite b2 Launch\", \"begin\"] = activities.at[\"Satellite b2 Development\", \"begin\"] + activities.at[\"Satellite b2 Development\", \"duration\"] + satellite_launch_delay\n",
     "activities.at[\"Operation Infrastructure\", \"begin\"] = activities.at[\"Satellite b1 Launch\", \"begin\"] + activities.at[\"Satellite b1 Launch\", \"duration\"]\n",
-    "\n",
+    "revenues = market_demand_simulator(time, activities.at[\"Satellite b2 Launch\", \"begin\"] + activities.at[\"Satellite b2 Launch\", \"duration\"])\n",
     "\n",
     "# Initialize the FinancialPeriod\n",
     "fss = FinancialStatementSimulator(first_year=project_begin, duration=simulation_length, wacc=0.0333)\n",
@@ -523,7 +526,7 @@
    "source": [
     "# elements = [1.1, 2.2, 3.3]\n",
     "# probabilities = [0.2, 0.5, 0.3]\n",
-    "# np.random.choice(elements, 10, p=probabilities)\n",
+    "# np.random.choice(a=elements, size=1, p=probabilities)\n",
     "\n",
     "def simulation():\n",
     "    project_begin = 2023\n",
@@ -550,7 +553,7 @@
     "    activities.at[\"Satellite b1 Launch\", \"begin\"] = activities.at[\"Satellite b1 Development\", \"begin\"] + activities.at[\"Satellite b1 Development\", \"duration\"] + satellite_launch_delay\n",
     "    activities.at[\"Satellite b2 Launch\", \"begin\"] = activities.at[\"Satellite b2 Development\", \"begin\"] + activities.at[\"Satellite b2 Development\", \"duration\"] + satellite_launch_delay\n",
     "    activities.at[\"Operation Infrastructure\", \"begin\"] = activities.at[\"Satellite b1 Launch\", \"begin\"] + activities.at[\"Satellite b1 Launch\", \"duration\"]\n",
-    "\n",
+    "    revenues = market_demand_simulator(time, activities.at[\"Satellite b2 Launch\", \"begin\"] + activities.at[\"Satellite b2 Launch\", \"duration\"])\n",
     "\n",
     "    # Initialize the FinancialPeriod\n",
     "    fss = FinancialStatementSimulator(first_year=project_begin, duration=simulation_length, wacc=0.0333)\n",
