Saved also SVG for the docx

--- a/main.ipynb
+++ b/main.ipynb
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -698,6 +698,7 @@
     "\n",
     "# Show plot\n",
     "plt.savefig('plot-NPVs.pdf', format='pdf')\n",
+    "plt.savefig('plot-NPVs.svg', format='svg')\n",
     "# plt.savefig('plot-NPVs.svg', format='svg')\n",
     "\n",
     "plt.show()"
@@ -869,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -916,6 +917,7 @@
     "plt.grid(True)\n",
     "plt.axhline(y=0.5, color='r')\n",
     "plt.savefig('plot-CDF.pdf', format='pdf')\n",
+    "plt.savefig('plot-CDF.svg', format='svg')\n",
     "plt.show()\n",
     "\n",
     "plt.plot(xx, hist, marker='.', linestyle='-')\n",
@@ -925,6 +927,7 @@
     "plt.grid(True)\n",
     "# plt.axhline(y=0.5, color='r')\n",
     "plt.savefig('plot-PDF.pdf', format='pdf')\n",
+    "plt.savefig('plot-PDF.svg', format='svg')\n",
     "plt.show()\n",
     "\n",
     "print(np.mean(npv_final_distribution_sampling), np.std(npv_final_distribution_sampling))"
